# code-insights

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: xiaohongshu_说明文档.md
src/code_insights/: __init__.py  __main__.py  analyzer.py  cache.py  cli.py  config.py  language_stats.py  monitor.py  scanner.py  terminal_report.py
tests/e2e/: test_cli_analyze.py
tests/monitor_runtime_demo/: README.md  app.py  new_feature.py  replay_changes.py  utils.py  worker.ts
tests/unit/: test_analyzer.py  test_cli_monitor.py  test_language_stats.py  test_monitor.py
