[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "code-insights"
version = "0.1.0"
description = "Lightweight offline terminal codebase analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Code Insights" }
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9.4",
  "pathspec>=0.12.1"
]

[project.scripts]
code-insights = "code_insights.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_insights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
